# salusmetrics

./: .gitignore  Cargo.toml  README.md
apps/ingest-client/: package-lock.json  package.json  tsconfig.json  webpack.config.js
apps/ingest-client/src/: ClientEvent.ts  EventPublisher.ts  Events.ts  HttpEventPublisher.ts  base-tsconfig.json  index.ts  tsconfig.json
apps/ingest-client/src/Event/: Event.ts  EventRegistry.ts
apps/ingest-client/src/EventManager/: EventManager.ts
apps/ingest-client/src/EventPublisher/: EventPublisher.ts  HttpEventPublisher.ts  PublishEvent.ts  WorkerMessage.ts  WorkerPublisher.js  WorkerPublisherGateway.ts  WorkerPublisherProxy.ts
apps/ingest-client/src/SiteState/: SiteState.ts  WebStorageSiteStateRepository.ts
apps/ingest-client/src/common/: tsconfig.json
apps/ingest-client/src/common/Event/: Event.ts  EventConfiguration.ts  EventRegistry.ts
apps/ingest-client/src/common/EventPublisher/Http/: HttpEventPublisher.ts
apps/ingest-client/src/common/EventPublisher/Worker/: WorkerMessage.ts
apps/ingest-client/src/common/SiteState/: SiteState.ts
apps/ingest-client/src/dedicated-worker/: WorkerPublisher.js  WorkerPublisherProxy.ts  tsconfig.json
apps/ingest-client/src/main-thread/: tsconfig.json
apps/ingest-client/src/main-thread/EventManager/: EventManager.ts
apps/ingest-client/src/main-thread/EventPublisher/: WorkerPublisherGateway.ts
apps/ingest-client/src/main-thread/SiteState/: WebStorageSiteStateRepository.ts
sql/clickhouse/schema/: apikey.sql  dbip_city.sql  event.sql  id_rollup.sql  section.sql  session.sql  user_agent.sql  visitor.sql
sql/clickhouse/superset_dataset_scripts/: dataset_definitions.sql
sql/clickhouse/test_data_population/: event_generation.sql
src/conf/: Cargo.toml
src/conf/src/: conf_error.rs  env_conf.rs  layer.rs  lib.rs  lifecycle.rs  listener.rs  metrics_database.rs  settings.rs  state.rs  tracing.rs
src/conf/src/domain/: mod.rs
src/conf/src/domain/model/: compression.rs  configuration_error.rs  cors.rs  ip_source.rs  listener.rs  metrics_db.rs  mod.rs  timeout.rs  tracing.rs
src/conf/src/domain/repository/: configuration_repository.rs  mod.rs
src/conf/src/domain/service/: configuration_service.rs
src/conf/src/repositories/: mod.rs
src/conf/src/repositories/env/: env_repository.rs  env_settings.rs  mod.rs  repository.rs
src/conf/src/repositories/env_repository/: env_repository.rs  env_settings.rs  mod.rs
src/conf/src/services/: conf_service.rs  mod.rs
src/config/: Cargo.toml
src/config/src/: lib.rs  lifecycle.rs  tracing.rs
src/ingest/: Cargo.toml
src/ingest/src/: client_event.rs  client_event_request.rs  event_record.rs  ingest_error.rs  lib.rs  util.rs
src/ingest/src/domain/model/: ingest_action_summary.rs  ingest_event.rs  mod.rs  util.rs
src/ingest/src/domain/repository/: ingest_event_repository.rs  mod.rs
src/ingest/src/domain/service/: ingest_event_service.rs  mod.rs
src/ingest/src/http_api/: mod.rs
src/ingest/src/http_api/handlers/: mod.rs  save_client_events.rs
src/ingest/src/http_api/model/: client_event_action_summary.rs  client_event_request.rs  client_event_request_components.rs  ingest_application_state.rs  mod.rs
src/ingest/src/http_api/server/: http_server.rs
src/ingest/src/repositories/: clickhouse_event_record.rs  clickhouse_ingest_repository.rs  clickhouse_source_record.rs  mod.rs
src/ingest/src/services/: ingest_service.rs  mod.rs
src/report/: Cargo.toml  README.md
src/report/src/: lib.rs
src/report/src/http_api/server/: http_server.rs
