[package]
name = "salusmetrics-ingest"
description = "Ingest Component of salusmetrics, a web and app analytics package that allows for ingestion, aggregation and reporting on web ann app analytics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
clickhouse.workspace = true
hyper.workspace = true
serde.workspace = true
serde_repr.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[[bin]]
name = "ingest_server"
path = "bin/ingest_server.rs"
